# local_spend

./: .gitignore  AGENTS.md  BLOCKERS.md  README.md  TASKS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
docs/: DECISIONS.md  PRIVACY.md  PRODUCT_SPEC.md  research.md
public/: manifest.webmanifest  sw.js
scripts/: generate_icons.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CategoryChip.tsx  CategoryDonut.tsx  CurrencyBreakdown.test.tsx  CurrencyBreakdown.tsx  EmptyState.tsx  ExpenseForm.tsx  ExpenseList.tsx  FormBackAction.tsx  MonthPicker.test.tsx  MonthPicker.tsx  NaturalQuickAdd.tsx  ProfileSwitcher.tsx  TransactionSearch.test.tsx  TransactionSearch.tsx
src/lib/: analytics.ts  backup.ts  categories.ts  csv.ts  currencies.ts  dataControls.ts  dataLimits.ts  date.ts  defaults.ts  drafts.ts  expenseTemplates.ts  localspend.test.ts  money.ts  payments.ts  recurring.ts  types.ts  wallpaper.ts
src/lib/ai/: localParser.ts  prompts.ts  providers.ts  schema.ts
src/lib/storage/: browserSections.ts  repository.ts
src/screens/: CalendarScreen.tsx  CategoriesScreen.tsx  SettingsScreen.test.tsx  SettingsScreen.tsx  SummaryScreen.test.tsx  SummaryScreen.tsx  TodayScreen.test.tsx  TodayScreen.tsx
