[package]
name = "localspend"
version = "0.1.0"
description = "LocalSpend local-first spending tracker"
authors = ["LocalSpend"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "localspend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
keyring = "2.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
